--- a/OTO-tempostack-multitenant.yaml
+++ b/OTO-tempostack-multitenant.yaml
@@ -2,6 +2,8 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: tempostack
+  label:
+    openshift.io/cluster-monitoring: "true"
 ---
 apiVersion: v1
 kind: Secret
@@ -21,6 +23,10 @@ metadata:
   name: simplest
   namespace: tempostack
 spec:
+  observability:
+    metrics:
+      createServiceMonitors: true
+      createPrometheusRules: true
   storage:
     secret:
       name: minio-test
