--- a/OTO-tempostack-multitenant.yaml
+++ b/OTO-tempostack-multitenant.yaml
@@ -2,7 +2,7 @@ apiVersion: v1
 kind: Namespace
 metadata:
   name: tempostack
-  label:
+  labels:
     openshift.io/cluster-monitoring: "true"
 ---
 apiVersion: v1
